--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-02-10  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/HiddenFilesPref.m
+	Clean up types as well as certain key localizations.
+
 2016-02-02  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Finder/Modules/FModuleSize/FModuleSize.m
