Localize panel title
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39356 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2016-02-10  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/HiddenFilesPref.m
+	Localize panel title.
+
+2016-02-10  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Preferences/HiddenFilesPref.m
 	Clean up types as well as certain key localizations.
 
 2016-02-02  Riccardo Mottola <rm@gnu.org>
