add missing Editor key
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39362 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -338,8 +338,9 @@
 "Use Default Settings" = "Use Default Settings";	
 
 	
-/* DefaultEditor.m */            
+/* DefaultEditor.m */
 
+"Editor" = "Editor";
 "Default Editor" = "Default Editor";
 "No Default Editor" = "No Default Editor";
 "Choose" = "Choose";
