--- a/GWorkspace/Resources/French.lproj/Localizable.strings
+++ b/GWorkspace/Resources/French.lproj/Localizable.strings
@@ -359,8 +359,9 @@
 "Use Default Settings" = "Param. par défaut";	
 	
 	
-/* DefaultEditor.m */            
+/* DefaultEditor.m */
 
+"Editor" = "Éditeur";
 "Default Editor" = "Editeur par défaut";
 "No Default Editor" = "Pas d'éditeur par défaut";
 "Choose" = "Sélectionner";
