Remove getFileSystemInfoForPath of category already implemented in class
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39364 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2016-02-10  Riccardo Mottola <rm@gnu.org>
 
+	* FSNode/FSNodeRep.h
+	* FSNode/FSNodeRep.m
+	Remove getFileSystemInfoForPath of category already implemented in class.
+
+2016-02-10  Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/Preferences/HiddenFilesPref.m
 	Localize panel title.
 
