Remove mountedLocalVolumePaths already implemented in NSWorkspace
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39365 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@
 
 	* FSNode/FSNodeRep.h
 	* FSNode/FSNodeRep.m
+	Remove mountedLocalVolumePaths already implemented in NSWorkspace.
+
+2016-02-12  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.h
+	* FSNode/FSNodeRep.m
 	Remove getFileSystemInfoForPath of category already implemented in class.
 
 2016-02-10  Riccardo Mottola <rm@gnu.org>
