Delete unmountAndEjectDeviceAtPath custom implementation and use AppKit's one
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39371 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-02-13  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m
+	Delete unmountAndEjectDeviceAtPath custom implementation and use AppKit's one.
+
 2016-02-12  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.h
