Delete mountedRemovableMedia custom implementation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39372 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-02-15  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.h
+	* FSNode/FSNodeRep.m
+	Delete mountedRemovableMedia custom implementation.
+
 2016-02-13  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
