--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-02-16  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.h
+	* FSNode/FSNodeRep.m
+	Delete custom mountNewRemovableMedia implementation.
+
 2016-02-15  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.h
