Self initialize FSNodeRep with removable medias and don't go through GWorkspace which used a non-API method
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39387 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-02-17  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m
+	* GWorkspace/GWorkspace.m
+	Self initialize FSNodeRep with removable medias and don't go through GWorkspace which used a non-API method.
+
 2016-02-16  Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.h
