Listen to NSWorkspaceDidMountNotification and NSWorkspaceDidUnmountNotification and update FSNodeRep accordingly
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39391 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2016-02-17  Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/FileViewer/GWViewersManager.m
+	Listen to NSWorkspaceDidMountNotification and NSWorkspaceDidUnmountNotification and update FSNodeRep accordingly.
+
+2016-02-17  Riccardo Mottola <rm@gnu.org>
+
 	* FSNode/FSNodeRep.m
 	* GWorkspace/GWorkspace.m
 	Self initialize FSNodeRep with removable medias and don't go through GWorkspace which used a non-API method.
