--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2016-02-22  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Fiend/FiendLeaf.m
+	* GWorkspace/GWorkspace.m
+	* GWorkspace/WorkspaceApplication.m
+	* Recycler/Recycler.m
+	Update tag of performFileOperation from int to NSInteger as per current API.
+
 2016-02-17  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/FileViewer/GWViewersManager.m
