Allow disk checking also without desktop
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39405 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2016-02-22  Riccardo Mottola <rm@gnu.org>
 
+	* GWorkspace/GWorkspace.m
+	Allow disk checking also without desktop.
+
+2016-02-22  Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/Fiend/FiendLeaf.m
 	* GWorkspace/GWorkspace.m
 	* GWorkspace/WorkspaceApplication.m
