--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-02-23  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.m
+	Quit Recycler.app when activating desktop.
+
 2016-02-22  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
