Implement unlock methods and use them when unmounting fails
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39420 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2016-02-26 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/Dock/DockIcon.m
+	* GWorkspace/Desktop/GWDesktopManager.h
+	* GWorkspace/Desktop/GWDesktopManager.m
+	* GWorkspace/Desktop/GWDesktopView.h
+	* GWorkspace/Desktop/GWDesktopView.m
+	Implement unlock methods and use them when unmounting fails.
+
 2016-02-23  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
