Do not retain a string constant
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39434 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-03-02 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNFunctions.m
+	Do not retain a string constant.
+
 2016-02-26 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/Dock/DockIcon.m
