--- a/FSNode/Resources/Italian.lproj/Localizable.strings
+++ b/FSNode/Resources/Italian.lproj/Localizable.strings
@@ -131,3 +131,11 @@ add comments above this one
 /*** Strings from ../FSNIconsView.m ***/
 /* File: ../FSNIconsView.m:799 */
 "Open with" = "Apri con";
+
+"Desktop"="Scrivania";
+"Music"="Musica";
+"Images"="Immagini";
+"Documents"="Documenti";
+"Downloads"="Scaricamenti";
+"Applications"="Applicazioni";
+"Tools"="Strumenti";
