--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-03-07 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNode.m
+	Localize the node name only if it is a directory.
+
 2016-03-02 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/Attributes.m
