Fix linking argument order in configure test.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39514 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-03-10  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
+	* Inspector/aclocal.m4 (AC_CHECK_PDFKIT):
+	Fix linking argument order in configure test.
+
 2016-03-07 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNode.m
