--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-03-22 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/GWorkspace.h
+	* GWorkspace/GWorkspace.m
+	Fix NSInteger vs. int
+
 2016-03-15 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Preferences/DesktopPref.m
