Enable thumbnail generation also for the desktop
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39597 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-03-23 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/GWDesktopManager.m
+	Enable thumbnail generation also for the desktop
+
 2016-03-22 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.h
