--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2016-03-24 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Finder/Modules/FModuleAnnotations/FModuleAnnotations.m
+	* GWorkspace/Finder/Modules/FModuleContents/FModuleContents.m
+	* GWorkspace/Finder/Modules/FModuleCrDate/FModuleCrDate.m
+	* GWorkspace/Finder/Modules/FModuleKind/FModuleKind.m
+	* GWorkspace/Finder/Modules/FModuleModDate/FModuleModDate.m
+	* GWorkspace/Finder/Modules/FModuleName/FModuleName.m
+	* GWorkspace/Finder/Modules/FModuleOwner/FModuleOwner.m
+	* GWorkspace/Finder/Modules/FModuleSize/FModuleSize.m
+	* GWorkspace/Finder/Modules/FinderModulesProtocol.h
+	use NSInteger and NSComparisonResult instead of int.
+
 2016-03-23 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopManager.m
