Clean up code and make it more robust
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39601 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
 	* GWorkspace/Finder/Modules/FinderModulesProtocol.h
 	use NSInteger and NSComparisonResult instead of int.
 
+	* Tools/searchtool/searchtool.m
+	Clean up code and make it more robust.
+
 2016-03-23 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopManager.m
