--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-04-07 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRep.m
+	Cleanup and use NSUInteger
+
 2016-04-06 17:41-EDT Gregory John Casamento <greg.casamento@gmail.com>
 
 	* GWorkspace/GWorkspace.m: Add exception handler when loading
