Use numeric search to sort icons index array
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39657 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-04-12 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Desktop/Dock/Dock.m
+	Use numeric search to sort icons index array.
+
 2016-04-07 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
