new icon by Bertrand
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39658 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* GWorkspace/Desktop/Dock/Dock.m
 	Use numeric search to sort icons index array.
 
+	* FSNode/Resources/Images/HardDisk.tiff
+	New icon by Bertrand
+
 2016-04-07 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/FSNodeRep.m
