Use different cache keys for icons and icons with link badge. Remove fail-over case which should not happen and Log a warning instead.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39663 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2016-04-13 Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRepIcons.m
+	Use different cache keys for icons and icons with link badge. Remove fail-over case which should not happen and Log a warning instead.
+
 2016-04-12 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/Dock/Dock.m
