--- a/FSNode/Resources/German.lproj/Localizable.strings
+++ b/FSNode/Resources/German.lproj/Localizable.strings
@@ -172,6 +172,6 @@ add comments above this one
 "Music" = "Musik";
 "Images" = "Bilder";
 "Documents" = "Dokumente";
-"Downloads" = "Heruntergeladet";
-"Tools" = "Werkzuege";
-"Application" = "Applikation";
+"Downloads" = "Heruntergeladen";
+"Tools" = "Werkzeuge";
+"Applications" = "Anwendungen";
