--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-06-01 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	* Inspector/ContentViewers/ImageViewer/Resizer.m
+	Partially revert, but fix and complete using a class instead of a separate Task, Rename Resizer to ImageResizer to avid class name clash.
+
 2016-04-28 Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/GWorkspace.m
