--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,14 @@
 
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	* Inspector/ContentViewers/ImageViewer/Resizer.h
+	* Inspector/ContentViewers/ImageViewer/Resizer.m
+	Use DO and connections to communicate to thread.
+
+2016-06-01 Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
 	* Inspector/ContentViewers/ImageViewer/Resizer.m
 	Partially revert, but fix and complete using a class instead of a separate Task, Rename Resizer to ImageResizer to avid class name clash.
 
