Pass data directly without Archiving/Unarchiving
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39829 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2016-06-01 Riccardo Mottola <rm@gnu.org>
 
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
+	* Inspector/ContentViewers/ImageViewer/Resizer.m
+	Pass data directly without Archiving/Unarchiving.
+
+2016-06-01 Riccardo Mottola <rm@gnu.org>
+
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.m
 	* Inspector/ContentViewers/ImageViewer/Resizer.h
