fix typos and inconsistent translation
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@39854 72102866-910b-0410-8b05-ffd578937521

--- a/GWorkspace/Resources/Spanish.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Spanish.lproj/Localizable.strings
@@ -108,10 +108,10 @@
 
 "File Viewer" = "Visor de Ficheros";
 
-"Quit!" = "Cellar";
+"Quit!" = "Salir!";
 
 "Do you really want to quit?" = "\U00BFRealmente desea salir?";
-"Yes" = "Si;
+"Yes" = "Si";
 "No" = "No";
 
 "Log out" = "Cerrar sesi\U00F3n";
