--- a/GWorkspace/Resources/Spanish.lproj/Localizable.strings
+++ b/GWorkspace/Resources/Spanish.lproj/Localizable.strings
@@ -72,7 +72,7 @@
                 "Go forward" = "Ir adelante";
         "Show Desktop" = "Mostrar Escritorio";
         "Hide Desktop" = "Ocultar Escritorio";
-        "Show Recycler" = "Mostrarar Papelera";
+        "Show Recycler" = "Mostrar Papelera";
         "Hide Recycler" = "Ocultar Papelera";
         "Check for disks" = "Verificar discos";
         
